--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,20 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
+  adapter: sqlite3
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: migrant_development
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: migrant_test
-  host: localhost
+  database: db/test.sqlite3
 
 production:
   <<: *default
